@@ -1,3 +1,9 @@
+Thu Dec  3 23:49:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
+
+          Updated error logging for expired NAK requests.
+
 Thu Dec  3 22:23:05 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
 
         * tools/odds_monitor/MonitorData.h:
